<resources>
    <string name="app_name">CHATein</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="display_name01">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_am_using_chatein_app">HI There ! I am using CHATein App</string>
    <string name="display_name1">Display Name</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="display_name12">Display Name</string>
    <string name="current_user_status">Current User Status</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="display_name">Display Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="your_message">Your message</string>

</resources>
