<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:src="@mipmap/default_avatar_round"
        tools:id="@+id/settings_image" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:text="@string/display_name"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hi_there_i_am_using_chatein_app"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <Button
        android:id="@+id/settings_image_button"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:background="@color/colorPrimary"
        android:text="@string/change_image"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/settings_status_button"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:background="@color/colorAccent"
        android:text="@string/change_status"
        android:textColor="#ffffff" />

</RelativeLayout>